Update stylesheet fixes to cover all widths not covered by mobile
fixes/desktop.(specialpages.)less only covered width > 1200, and
fixes/mobile.(specialpages.)less only covered width <= 720.  No
fixes were applied to the widths between leaving items like
VisualEditor overlays behind the navbar.

Change desktop fixes to cover > 720 widths.

[3.1.x]

ERM 18476

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -1,51 +1,49 @@
-@media ( min-width: 1201px ) {
-	/* visualeditor */
-	.ve-ui-overlay-global {
-		z-index: 999 !important;
-	}
+/* visualeditor */
+.ve-ui-overlay-global {
+	z-index: 999 !important;
+}
 
-	p.ve-ce-generated-wrapper,
-	p.mw-empty-elt,
-	td.ve-ce-tableCellableNode p,
-	.mw-editfont-monospace p.ve-ce-paragraphNode {
-		margin: 0 0 0 0 !important;
-	}
+p.ve-ce-generated-wrapper,
+p.mw-empty-elt,
+td.ve-ce-tableCellableNode p,
+.mw-editfont-monospace p.ve-ce-paragraphNode {
+	margin: 0 0 0 0 !important;
+}
 
-	span.ve-ce-branchNode-slug {
-		display: inline-block;
-	}
+span.ve-ce-branchNode-slug {
+	display: inline-block;
+}
 
-	.oo-ui-processDialog-actions-primary .oo-ui-widget-enabled a {
-		color: #FFFFFF !important;
-	}
+.oo-ui-processDialog-actions-primary .oo-ui-widget-enabled a {
+	color: #FFFFFF !important;
+}
 
-	.oo-ui-processDialog-actions-safe .oo-ui-widget-enabled a {
-		color: #222222 !important;
-	}
+.oo-ui-processDialog-actions-safe .oo-ui-widget-enabled a {
+	color: #222222 !important;
+}
 
-	/* editor */
-	.wikiEditor-ui-top {
-		height: 0;
-	}
-	#wikiEditor-section-characters .pages span {
-		height: 1.5em;
-	}
+/* editor */
+.wikiEditor-ui-top {
+	height: 0;
+}
+#wikiEditor-section-characters .pages span {
+	height: 1.5em;
+}
 
-	.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary > .oo-ui-buttonElement-button {
-		background-color: #36c;
-		color: #222;
-		border-color: #a2a9b1;
+.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary > .oo-ui-buttonElement-button {
+	background-color: #36c;
+	color: #222;
+	border-color: #a2a9b1;
 
-		&:hover,
-		&:focus {
-			background-color: #447ff5;
-			border-color: #447ff5;
-		}
+	&:hover,
+	&:focus {
+		background-color: #447ff5;
+		border-color: #447ff5;
 	}
+}
 
-	// Window must be on top of everything, else, its buttons will get hidden
-	// below the top bar in full-screen dialogs or in mobile
-	.oo-ui-window {
-		z-index: 9999;
-	}
+// Window must be on top of everything, else, its buttons will get hidden
+// below the top bar in full-screen dialogs or in mobile
+.oo-ui-window {
+	z-index: 9999;
 }
