--- a/resources/stylesheets/fixes/desktop.specialpages.less
+++ b/resources/stylesheets/fixes/desktop.specialpages.less
@@ -1,7 +1,3 @@
-@media ( min-width: 1201px ) {
-	body.ns-special{}
-}
-
 .mw-htmlform fieldset {
 	border: none;
 	border-radius: 0.1875rem;
